--- a/layouts/partials/custom_head.html
+++ b/layouts/partials/custom_head.html
@@ -12,10 +12,26 @@
     /* --section-light-bg-color: #ffdb8c!important; */
     --section-dark-bg-color: rgb(175, 173, 208)!important;
 
+    /* Purple tone */
+    /* --highlight: #35136e!important;
+    --highlight-contrast: white!important;
+
+    --highlight-inverse: #8c7fbd!important;
+    --highlight-inverse-contrast: white!important; */
+
      /* define list element for unnumbered lists, leave empty for default list element */
      /* fa-asterisk is the default icon if this variable definition is missing completely */
      --ul-li-icon: fa-dashcube;     /* this sets fa-dashcube as list icon */
      --ul-li-icon: ;                /* this sets the default html list icon */
+}
+#blog-logo {
+    max-height: 200px;
+}
+
+#site-head, #site-head.withCenteredImage {
+     #header-arrow:hover {
+          color: var(--highlight-inverse);
+     }
 }
 </style>
 
