--- a/layouts/partials/custom_head.html
+++ b/layouts/partials/custom_head.html
@@ -11,7 +11,8 @@
     --section-light-text-color: #3a4145!important;
     /* --section-light-bg-color: #ffdb8c!important; */
     /* --section-dark-bg-color: rgb(175, 173, 208)!important; */
-    --section-dark-bg-color: #35136e    !important;
+    /* --section-dark-bg-color: #35136e    !important; */
+    --section-dark-bg-color: #86c440;    !important;
 
     /* Purple tone */
     /* --highlight: #35136e!important;
