--- a/layouts/partials/custom_head.html
+++ b/layouts/partials/custom_head.html
@@ -12,7 +12,8 @@
     /* --section-light-bg-color: #ffdb8c!important; */
     /* --section-dark-bg-color: rgb(175, 173, 208)!important; */
     /* --section-dark-bg-color: #35136e    !important; */
-    --section-dark-bg-color: #86c440;    !important;
+    /* --section-dark-bg-color: #86c440;    !important; /* Light Green tone */
+    --section-dark-bg-color: #37501a;   !important; /* Dark Green tone */
 
     /* Purple tone */
     /* --highlight: #35136e!important;
@@ -26,6 +27,7 @@
      --ul-li-icon: fa-dashcube;     /* this sets fa-dashcube as list icon */
      --ul-li-icon: ;                /* this sets the default html list icon */
 }
+
 #blog-logo {
     max-height: 200px;
 }
